Sat Mar 21 15:01:26 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/io/console/console.c (console_set_winsize): use handle for
	  writing.  GetConsoleScreenBufferInfo seems failing on a handle
	  for reading.

	* io.c: [DOC] update the example of IO#winsize to use $stdout
	  instead of $stdin, which does not work on Windows.  a patch by
	  Jan Lelis <mail AT janlelis.de> at [ruby-core:68574].
	  [Bug #10986]

Fri Mar 20 18:41:03 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (respond_to_missing_p): check if the receiver responds to
	  the given method by respond_to_missing?.

	* proc.c (mnew_missing): create Method object for method_missing.
	  [ruby-core:68564] [Bug #10985]

Fri Mar 20 17:43:18 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* .travis.yml: enabled email notification.

Fri Mar 20 17:39:52 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* .travis.yml: removed Ruby 1.9.3 build on Travis CI

Fri Mar 20 12:38:36 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (obj_info): obj_info() can receive internal objects.

	* gc.c (check_rvalue_consistency): obj_info() returns const char *.

Fri Mar 20 12:14:37 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (obj_info): show class name and T_DATA type_name.

Thu Mar 19 22:12:46 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_copy_wb_protected_attribute): `dest' can be WB unprotected.

Thu Mar 19 21:25:25 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_copy_wb_protected_attribute): demote `dest' object.

Thu Mar 19 16:18:00 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c, internal.h: export rb_gc_verify_internal_consistency().

Thu Mar 19 16:15:24 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (obj_info): show allocation site if GC_DEBUG is not 0.

Thu Mar 19 16:12:01 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (newobj_of): fix RGENGC_OLD_NEWOBJ_CHECK logics.
	  * skip on incremental marking because not sure what happen :p
	  * rb_gc_writebarrier_remember() is enough to mark children.
