@@ -1,3 +1,9 @@
+Sun Mar 22 08:09:47 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* common.mk (ext/ripper/ripper.c, ext/rbconfig/sizeof/sizes.c):
+	  strip autogenerated dependencies which have invalid syntax in
+	  other than nmake.
+
 Sat Mar 21 15:01:26 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/io/console/console.c (console_set_winsize): use handle for
